--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+    <link rel='stylesheet' href='/build/bundle.css'>
+    
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
