--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte + Node.js API</title>
+    <title>Svelte + Node.js API</title>
+    
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
     <link rel='stylesheet' href='/build/bundle.css'>
-    
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
 
-<body>
+<body class="bg-gray-100">
 </body>
 </html>
